set alimama font-family globally

--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -1,13 +1,16 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'AlimamaFangYuanTi-Square';
+  font-style: normal;
+  src: url('../src/assets/fonts/AlimamaFangYuanTiVF-Thin.woff') format('woff'),
+    url('../src/assets/fonts/AlimamaFangYuanTiVF-Thin.woff2') format('woff2');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  body {
+    @apply font-alimama;
+  }
 }
